@@ -136,7 +136,7 @@ out_splines (FILE * ps_file, spline_list_array_type shape)
       if (this_list == 0 || !COLOR_EQUAL(list.color, last_color))
         {
 	  if (this_list > 0)
-	      OUT_LINE ("f");	      
+	      OUT_LINE ("*U");	      
 	  c = k = 255 - list.color.r;
 	  m = 255 - list.color.g;
 	  if (m < k)
@@ -150,6 +150,7 @@ out_splines (FILE * ps_file, spline_list_array_type shape)
 	  /* symbol k is used for CorelDraw 3/4 compatibility */
 	  OUT4 ("%f %f %f %f k\n", (double) c/255.0,
 		(double) m/255.0,(double) y/255.0, (double) k/255.0);
+	  OUT_LINE ("*u");
         }
       OUT_COMMAND2 (START_POINT (first).x, START_POINT (first).y, "m");
 
@@ -166,10 +167,11 @@ out_splines (FILE * ps_file, spline_list_array_type shape)
                           END_POINT (s).x, END_POINT (s).y,
                           "c");
         }
+      OUT_LINE ("f");
       last_color = list.color;
     }
   if (SPLINE_LIST_ARRAY_LENGTH (shape) > 0)
-      OUT_LINE ("f");
+      OUT_LINE ("*U");
 }
 
 
